--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,2 +1,4 @@
 $primaryFont: '"Inter", sans-serif';
 $headingTimes:  'Times New Roman';
+$heading: "Prata", serif;
+$rootFont: "Font Awesome 6 Free"
