--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -7,8 +7,8 @@
 @mixin touchButton {
     color: $black;
     font-size: 1vw;
-    width: 7vw;
-    height: 3vw;
+    width: 10vw;
+    height: 3.5vw;
     background-color: yellow;
     border: none;
 }
@@ -18,6 +18,11 @@
     justify-content: space-evenly;
     width: 20%;
     
+}
+
+@mixin normalFlex {
+    display: flex;
+    justify-content: space-between;
 }
 
 @mixin pointer {
