--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,4 +2,10 @@
     margin: 0;
     padding: 0;
     background-color: $black;
+    color: $white;
+}
+
+p {
+    color: #888;
+    line-height: 20px;
 }
