--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,18 +6,37 @@ header {
     @include flexSpace();
         h4 {
             font-size: 2vw;
-            font-family: $headingTimes;
-        }
-        button{
-            @include touchButton();
+            font-family: $heading;
+            font-weight: lighter
         }
         .menu {
             @include flex();
-            font-size: 1vw;
+            font-size: 1.5vw;
+            width: 50%;
             :hover {
                 color: $hover;
                 @include pointer();
                 border-bottom: 1px solid $white;
             }
         }
+        .img{
+            display: none;
+        }
+        .heading {
+            width: 30%;
+            padding-left: 2vw;
+        }
+        .head-button {
+            width: 20%;
+        }
+}
+
+@media screen and (max-width: 800px) {
+    header .img {
+        display: inline;
+        margin-right: 2vw;
+    }
+    header .menu, button{
+        display: none;
+    }
 }
