--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,17 +1,91 @@
 .main {
     color: $white;
     margin-top: 2vw;
+    padding: 0 1vw;
     h1 {
         font-family: $primaryFont;
         font-weight: lighter;
-        font-size: 6rem;
+        font-size: 5.5rem;
+    }
+    p {
+        width: 50%;
+        color: #888;
+        line-height: 1.5rem;
     }
     
+}
+
+.logos {
+    @include normalFlex;
+    margin-top: 3vw;
+    flex-wrap: wrap;
+    text-align: center;
+    padding: 0 1vw;
+    img {
+        width: 130px;
+    }
+}
+
+.section-1 {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    flex-wrap: wrap;
+    margin: auto;
+    img {
+        width: 90%;
+        margin-top: 5vw;
+        margin-bottom: 1vw;
+        margin-left: 2vw;;
+    }
+    p {
+        color: #888;
+        font-family: $rootFont;
+        text-align: justify;
+        inline-size: 43vw;
+        margin-top: 1vw;
+    }
+    .text {
+        text-align: left;
+        margin-left: 2vw;
+    }
+}
+
+.section-2 {
+    background: $mainCOlor;
+    padding: 3vw;
+    display: flex;
+    align-items: center;
+    // flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: justify;
+    h2 {
+        background: transparent;
+        margin-bottom: 1.5vw;
+
+    }
+    p {
+        background: transparent;
+        line-height: 30px;
+    }
+    .one {
+        width: 50%;
+        background: transparent;
+        margin-right: 10px;
+    }
+    .two {
+        width: 50%;
+        background: transparent;
+        margin-left: 10px;
+    }
 }
 
 @media screen and(max-width:700px) {
     .main h1 {
         font-size: 3rem;
+    }
+    .section-2 {
+        flex-wrap: wrap;
     }
     
    }
