--- a/scss/style.css
+++ b/scss/style.css
@@ -2,6 +2,22 @@
   margin: 0;
   padding: 0;
   background-color: black;
+  color: white;
+}
+
+p {
+  color: #888;
+  line-height: 20px;
+}
+
+header button {
+  color: black;
+  font-size: 1vw;
+  width: 10vw;
+  height: 3.5vw;
+  background-color: yellow;
+  border: none;
+  margin-right: 2vw;
 }
 
 header {
@@ -22,16 +38,8 @@ header {
 
 header h4 {
   font-size: 2vw;
-  font-family: "Times New Roman";
-}
-
-header button {
-  color: black;
-  font-size: 1vw;
-  width: 7vw;
-  height: 3vw;
-  background-color: yellow;
-  border: none;
+  font-family: "Prata", serif;
+  font-weight: lighter;
 }
 
 header .menu {
@@ -42,7 +50,8 @@ header .menu {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   width: 20%;
-  font-size: 1vw;
+  font-size: 1.5vw;
+  width: 50%;
 }
 
 header .menu :hover {
@@ -51,20 +60,141 @@ header .menu :hover {
   border-bottom: 1px solid white;
 }
 
+header .img {
+  display: none;
+}
+
+header .heading {
+  width: 30%;
+  padding-left: 2vw;
+}
+
+header .head-button {
+  width: 20%;
+}
+
+@media screen and (max-width: 800px) {
+  header .img {
+    display: inline;
+    margin-right: 2vw;
+  }
+  header .menu, button {
+    display: none;
+  }
+}
+
 .main {
   color: white;
   margin-top: 2vw;
+  padding: 0 1vw;
 }
 
 .main h1 {
   font-family: '"Inter", sans-serif';
   font-weight: lighter;
-  font-size: 6rem;
+  font-size: 5.5rem;
+}
+
+.main p {
+  width: 50%;
+  color: #888;
+  line-height: 1.5rem;
+}
+
+.logos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 3vw;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  text-align: center;
+  padding: 0 1vw;
+}
+
+.logos img {
+  width: 130px;
+}
+
+.section-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: auto;
+}
+
+.section-1 img {
+  width: 90%;
+  margin-top: 5vw;
+  margin-bottom: 1vw;
+  margin-left: 2vw;
+}
+
+.section-1 p {
+  color: #888;
+  font-family: "Font Awesome 6 Free";
+  text-align: justify;
+  inline-size: 43vw;
+  margin-top: 1vw;
+}
+
+.section-1 .text {
+  text-align: left;
+  margin-left: 2vw;
+}
+
+.section-2 {
+  background: #2a2d3a;
+  padding: 3vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  text-align: justify;
+}
+
+.section-2 h2 {
+  background: transparent;
+  margin-bottom: 1.5vw;
+}
+
+.section-2 p {
+  background: transparent;
+  line-height: 30px;
+}
+
+.section-2 .one {
+  width: 50%;
+  background: transparent;
+  margin-right: 10px;
+}
+
+.section-2 .two {
+  width: 50%;
+  background: transparent;
+  margin-left: 10px;
 }
 
 @media screen and (max-width: 700px) {
   .main h1 {
     font-size: 3rem;
+  }
+  .section-2 {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 /*# sourceMappingURL=style.css.map */
